--- a/index.html
+++ b/index.html
@@ -42,14 +42,12 @@
   <section id="welcome" class="section">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          <h1>Hi, I'm <span>Harini Relangi</span></h1>
-          <h4>Frontend developer</h4>
+        <div >
+          <h1>Hello!, I'm <span>Harini Relangi</span></h1>
         </div>
         <!-- <div class="col-md-6">
           <img src="your_image_url_here" alt="Harini Relangi" style="max-width: 100%;">
         </div> -->
-         
       </div>
     </div>
   </section>
@@ -58,10 +56,19 @@
     <div class="container ">
       <h2 class="section-header">About Me</h2>
       <div class=" col-md-8 about">
-        <p>I am a dedicated, detail-oriented and open-minded.
-           I believe that a person should work on developing their professional skills and learning new things all the time.
-          I get across to people and adjust to changes with ease. 
-          Currently, iam looking for opportunity to do better and achieve greatness </p>
+        <p>Recent graduate eager to kickstart a career in the professional world.
+           With a strong academic background, I'm ready to apply my skills and enthusiasm to real-world projects.
+          </p>
+        <p>Although I may be a fresher in the professional realm, I am eager to leverage my skills and
+           knowledge to contribute meaningfully to any project or team I become a part of, 
+           where I aspire to make a difference through my work.</p>
+            <p>Currently, iam looking for opportunity to do better and achieve greatness. 
+              Let's collaborate and create something amazing together!</p>
+        <!-- <p>I am a dedicated, detail-oriented and open-minded.
+           I believe that a person should work on developing their professional skills and learning
+            new things all the time.
+          I get across to people and adjust to changes with ease.  -->
+           </p>
       </div>
     </div>
   </section>
@@ -75,21 +82,22 @@
             <h4 >Bachelor's of Technology</h4>
             <p>2019 - 2023</p>
             <li>BVCITS - JNTUK</li>
-            <li> Stream : ECE</li>
+            <li> Major : ECE</li>
             <li>CGPA : 7.5 </li>
           </div>
         </div>
-          <div class="education-card">
-            <div class="col-md-4  ">
+          <div class="col-md-4">
+            <div class="education-card">
               <h4>Intermediate</h4>
               <p>2017 -2019</p>
               <li>Aditya Junior College</li>
+              <li> Major : MPC</li>
               <li>CGPA : 9.88</li>
           </div>
           </div>
-        <div class="col-md-4 " >
+        <div class="col-md-4" >
           <div class="education-card">
-            <h4 >Secondary Education</h4>
+            <h4 >SSC</h4>
             <p>2016-2017</p>
             <li>Sir CV Raman Public school</li>
             <li>CGPA:9.7</li>
@@ -107,25 +115,18 @@
         <!-- Soft Skills Section -->
         <div class="col-md-6 skills">
           <h4>Technical Skills</h4>
-          <ul>
-            <li>C</li>
-            <li>JAVA</li>
-            <li>HTML & CSS</li>
-            <li>JAVASCRIPT</li>
-            <li>SQL</li>
-            <li>PYTHON</li>
-          </ul>
+            <li>Languages: HTML, CSS, JavaScript, SQL, C, Python</li>
+            <li>Frameworks/Libraries: Bootstrap, React.js</li>
+            <li>Tools: Git, Visual Studio Code</li>
+            <li>Development Methodologies: Agile, Scrum</li>
         </div>
         <!-- Hard Skills Section -->
         <div class="col-md-6 skills">
           <h4>Personal Traits</h4>
-          <ul>
-            <li>Flexible learner</li>
-            <li>Communication skills</li>
-            <li>Team player</li>
-            <li>Problem solving</li>
+            <li>Good Communication</li>
+            <li>Flexible Learning</li>
             <li>Time Management</li>
-          </ul>
+            <li>Teamwork</li>
         </div>
       </div>
     </div>
@@ -142,29 +143,23 @@
             <p>The Tour & Travel Website is a comprehensive
                web application designed to provide users with
                 a seamless experience in exploring and booking 
-                various travel packages</p>
+                various travel packages.</p>
             <p>Technology Used: Html, CSS, Bootstrap, React.js</p>
           </div>
         </div>
         <div class="col-md-4">
           <div class="project-card">
             <h3>E-commerce Website</h3>
-            <p>Description of project 2</p>
-            <p>Technology Used: Tech 3, Tech 4</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="project-card">
-            <h3>Location Tracing</h3>
-            <p>Description of project 3</p>
-            <p>Technology Used: Tech 5, Tech 6</p>
+            <p>Designed and developed a basic e-commerce application for online product sale,
+               focusing on foundational features essential for online shopping.</p>
+            <p>Technology Used: Html, CSS, Javascript</p>
           </div>
         </div>
           <div class="col-md-4">
             <div class="project-card">
               <h3>LUT Based Multiplier</h3>
-              <p>Description of project 3</p>
-              <p>Technology Used: Tech 5, Tech 6</p>
+              <p>Led the development of an LUT based multiplier for short word length Digital Signal Processing (DSP) systems.</p>
+              <p>Technology Used: VHDL language,xilinx 14.7 simulator</p>
             </div>
         </div>
       </div>
@@ -176,10 +171,11 @@
     <div class="container">
       <h2 class="section-header">Contact</h2>
       <div class="section-content">
-        <p>LinkedIn: <a href="your_linkedin_url_here">Harini Relangi</a></p>
-        <p>GitHub: <a href="your_github_url_here">harinirelangi</a></p>
-        <p>Email: your_email@example.com</p>
-        <p>Phone: +1234567890</p>
+        <p>Email: harini.relangi@example.com</p>
+        <p>Phone: 7032656489</p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/harini-relangi/">www.linkedin.com/in/harini-relangi</a></p>
+        <p>GitHub: <a href="https://github.com/HariniRelangi">github.com/HariniRelangi</a></p>
+        
       </div>
     </div>
   </section>
